update initialize
Do phong quá gà và không thể đc sử dụng java 21 nên tôi phải làm code phức tạp hơn